# advent-of-code

./: .gitignore  README.md  shell.nix
clojure/: .gitignore  CHANGELOG.md  README.md  build.clj  deps.edn  pom.xml  shell.nix
clojure/src/kozko2001/: day02.clj
clojure/test/kozko2001/: day02_test.clj
elixir/: README.md  powerreport.html  shell.nix
elixir/lib/: day02.ex
elixir/test/: day02_test.exs
kotlin/: settings.gradle.kts
kotlin/lib/: build.gradle.kts
kotlin/lib/src/main/kotlin/advent_of_code_2023/: Day01.kt  Day03.kt  Day05.kt  Day08.kt  Day13.kt  Day19.kt  Day23.kt  Graph.kt  Resources.kt
kotlin/lib/src/test/kotlin/advent_of_code_2023/: Day03Test.kt  Day06Test.kt  Day09Test.kt  Day10Test.kt  Day11Test.kt  Day12Test.kt  Day13Test.kt  Day15Test.kt  Day16Test.kt  Day19Test.kt  Day20Test.kt  Day23Test.kt
lib/src/main/kotlin/advent_of_code_2023/: Day02.kt  Day04.kt  Day05.kt  Day06.kt  Day07.kt  Day09.kt  Day10.kt  Day11.kt  Day12.kt  Day14.kt  Day15.kt  Day16.kt  Day17.kt  Day20.kt  Day21.kt  Day23.kt
lib/src/test/kotlin/advent_of_code_2023/: Day01Test.kt  Day02Test.kt  Day04Test.kt  Day05Test.kt  Day07Test.kt  Day08Test.kt  Day14Test.kt  Day17Test.kt  Day21Test.kt  Day23Test.kt
ocaml/: .gitignore  shell.nix
ocaml/test/: dune  test_day02.ml  test_ocaml.ml
rust/: Cargo.toml  README.md  shell.nix
rust/src/: day02.rs  lib.rs
rust/src/2023/: day05.rs
rust/src/2024/: day01.rs  day02.rs  day03.rs  day04.rs  day06.rs  day07.rs  lib.rs
