[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[dependencies]
nom = "7.0"
regex = "1.10.2"

[[bin]]
name = "day05"
path = "./src/2023/day05.rs"

[[bin]]
name = "day01"
path = "./src/2024/day01.rs"

[[bin]]
name = "day02"
path = "./src/2024/day02.rs"

[[bin]]
name = "day03"
path = "./src/2024/day03.rs"
